--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Optional: fuente tipo blog */
-body {
-  font-family: 'Inter', sans-serif;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+}
+
+.bg-grid {
+  background-color: #000000;
+  background-image: 
+    linear-gradient(to right, #d20ff5 1px, transparent 1px),
+    linear-gradient(to bottom, #d20ff5 1px, transparent 1px);
+  background-size: 32px 32px;
 }
